      an error message on update rather than corrupting the CONARY
      file (CNY-1024)
    * Adding a file locally and then merging that file from upstream
      now causes an error as expected (it would traceback
      before). (CNY-1021)
    * Empty groups will not traceback if resolveDependencies is True --
      they will display an error message as expected. (CNY-1030)

Changes in 1.0.37:
  o Bugfixes:
    * A warning message produced when attempting to retrieve a OpenPGP
      key has been fixed.  The warning was introduced in CNY-589.

Changes in 1.0.36:
  o Client Changes:
    * The usage message displayed when running "conary" or "cvc" has
      been simplified and improved. (CNY-560)
    * When choosing how to match up troves with the same name, conary now
      takes paths into account, if there's a choice to make between matching
      up two old troves that are otherwise equivalent with a new trove, conary
      will choose the one that shares paths with the new trove. (CNY-819)
    * Conary will now allow "conary migrate --info" and "conary migrate
      --interactive" without displaying usage information. (CNY-985)
    * Conary now only warns about being able to execute gpg if a
      signature trust threshold has been set. (CNY-589)
    * Fixed cvcdesc after the refactoring of configuration options. (CNY-984)

  o Server Changes:
    * PostgreSQL support has been finalized and some SQL queries have
      been updated in the repository code for PostgreSQL
      compatibility.  PostgreSQL will be officially supported in a
      future release of Conary.
    * The repository browser is now viewable by Internet Explorer.

  o Build Changes:
    * cvc now allows files to be switched from autosource to normal
      and from normal to autosourced. (CNY-946)
    * Recipes will now automatically inherit a major_version macro,
      which is defined to be the first two decimal-seperated parts of