@@ -53,6 +53,9 @@ Changes in @NEW@:
       before). (CNY-1021)
     * Empty groups will not traceback if resolveDependencies is True --
       they will display an error message as expected. (CNY-1030)
+    * Specifying a bad protocol in a repositoryMap entry (a protocol
+      other than http or https) no longer causes an unhandled
+      exception. (CNY-932)
 
 Changes in 1.0.37:
   o Bugfixes:
